--- a/index.html
+++ b/index.html
@@ -12,12 +12,23 @@
   <title>Frontend Mentor | Order summary card</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
 
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
+  </style>
 </head>
 
 <body>
-
   <div id="container">
+    <div id="photo">
+      <img src="images/illustration-hero.svg" alt="hero-photo">
+    </div>
     <div id="main">
       <h1>Order Summary</h1>
       <p>You can now listen to millions of songs, audiobooks, and podcasts on any
@@ -25,25 +36,26 @@
     </div>
 
 
+    <div id="price">
+      <img src="images/icon-music.svg" alt="Music logo">
+      Annual Plan</br>
+      $59.99/year
 
-    <div id="plan">
-      <span>Annual Plan</span><br>
-      <span>$59.99/year</span>
       <a href="#">Change</a>
     </div>
-
-
-
-    <button>Proceed to Payment</button>
-    <button>Cancel Order</button>
-
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="https://www.frontendmentor.io/profile/Haseebullah555">Hasibullah Shirzad</a>.
+    <div id="btn">
+      <button class="btn">Proceed to Payment</button>
+      <button class="btn">Cancel Order</button>
     </div>
+
+
 
   </div>
 
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Haseebullah Shirzad</a>.
+  </div>
 </body>
 
 </html>
