--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="stylesheet.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&family=Red+Hat+Display:wght@500;700;900&display=swap"
+    rel="stylesheet">
 
   <title>Frontend Mentor | Order summary card</title>
 
@@ -35,17 +40,19 @@
         device anywhere you like!</p>
     </div>
 
-
     <div id="price">
       <img src="images/icon-music.svg" alt="Music logo">
-      Annual Plan</br>
-      $59.99/year
+      <div id="year">
+        <span id="first">Annual Plan</span></br>
+        <span id="second">$59.99/year</span>
+      </div>
+
 
       <a href="#">Change</a>
     </div>
     <div id="btn">
       <button class="btn">Proceed to Payment</button>
-      <button class="btn">Cancel Order</button>
+      <button class="btn btn1">Cancel Order</button>
     </div>
 
 
